--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,46 @@
           "string": "cpp",
           "string_view": "cpp",
           "*.tcc": "cpp",
-          "cmath": "cpp"
+          "cmath": "cpp",
+          "functional": "cpp",
+          "vector": "cpp",
+          "list": "cpp",
+          "initializer_list": "cpp",
+          "utility": "cpp",
+          "optional": "cpp",
+          "istream": "cpp",
+          "system_error": "cpp",
+          "tuple": "cpp",
+          "type_traits": "cpp",
+          "deque": "cpp",
+          "iterator": "cpp",
+          "atomic": "cpp",
+          "bit": "cpp",
+          "cctype": "cpp",
+          "clocale": "cpp",
+          "cstdarg": "cpp",
+          "cstddef": "cpp",
+          "cstdint": "cpp",
+          "cstdio": "cpp",
+          "cstdlib": "cpp",
+          "cstring": "cpp",
+          "cwchar": "cpp",
+          "cwctype": "cpp",
+          "map": "cpp",
+          "unordered_map": "cpp",
+          "exception": "cpp",
+          "memory": "cpp",
+          "memory_resource": "cpp",
+          "numeric": "cpp",
+          "random": "cpp",
+          "fstream": "cpp",
+          "iosfwd": "cpp",
+          "limits": "cpp",
+          "new": "cpp",
+          "sstream": "cpp",
+          "stdexcept": "cpp",
+          "streambuf": "cpp",
+          "typeinfo": "cpp",
+          "iomanip": "cpp"
      }
 }
